# installbiz-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  openapi-python-client.yaml  openapi.json  pyproject.toml
developer_api_client/: __init__.py
developer_api_client/api/администрирование/: reset_candidate_progress_api_admin_candidates_candidate_id_progress_delete.py  reset_client_throttling_api_admin_clients_client_ip_throttling_delete.py
developer_api_client/api/файлы/: download_files_api_files_download_post.py  get_random_file_names_api_files_names_get.py  mark_files_downloaded_api_files_downloaded_post.py
developer_api_client/models/: __init__.py  download_request.py  error_response.py  file_names_response.py  mark_downloaded_request.py  mark_downloaded_response.py  reset_response.py
src/: app.py  config.py  database.py  downloader.py  routes.py
templates/: calculation.html  files.html  index.html
