[project]
name = "file-catalog-analyzer"
version = "0.1.0"
description = "Lightweight FastAPI service for downloading and analysing text files"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiosqlite>=0.21,<1",
    "attrs>=25.1,<26",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.10,<3",
    "python-dateutil>=2.9,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.25,<1",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
